force-app/main/default/objects/Transaction__c/fields/Mode_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_Of_Payment__c</fullName>
    <label>Mode Of Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Credit Card/Debit Card</fullName>
            </value>
            <value>
                <fullName>NEFT/RTGS/UPI</fullName>
            </value>
            <value>
                <fullName>CASH</fullName>
            </value>
            <value>
                <fullName>TDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>