force-app/main/default/objects/Transaction__c/fields/Payment_Category__c.field-meta.xml
<CustomField>
    <fullName>Payment_Category__c</fullName>
    <label>Payment category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landlord Payment</fullName>
            </value>
            <value>
                <fullName>Tenant Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>