force-app/main/default/objects/Transaction__c/fields/To_Bank__c.field-meta.xml
<CustomField>
    <fullName>To_Bank__c</fullName>
    <label>To Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICICI</fullName>
            </value>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>Axis</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>Kotak Mahindra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>